fix: study progression

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -163,6 +163,13 @@ button {
   }
 }
 
-button {
+button,
+.pointer {
   cursor: pointer;
+}
+
+.master-icon {
+  font-size: 20px;
+  align-self: center;
+  margin-right: 10px;
 }
